# GalaxeaManipSim

./: .gitignore  DP_TRAINING_GUIDE.md  LICENSE  NOTICE  QUICK_START_NOISE_FILTER.md  README.md  REAL_ROBOT_DEPLOYMENT.md  RETRY_LOGIC_IMPLEMENTATION.md  VISUAL_MARKERS_README.md  collect_demo.sh  convert_h5_to_mp4.py  convert_h5_to_mp4_ffmpeg.py  demo_0_actions.npy  eval_act.sh  merge_demos.py  pyproject.toml  test_label_replan_noise.py  test_noise_filter.py  test_static_env.py  test_static_env_simple.py  trajectory_augmentation_config.py  trajectory_augmentation_example.py
docs/: DATALOADER_COMPARISON.md  DP_ENV_EVALUATION.md  NOISE_FILTERING_GUIDE.md  noise_filtering_usage.md  original_algorithms_guide.md
galaxea_sim/: __init__.py
galaxea_sim/controllers/: __init__.py  base.py  bimanual_ee_pose.py  bimanual_joint_position.py  bimanual_relaxed_ik.py
galaxea_sim/envs/: __init__.py
galaxea_sim/planners/: base.py  bimanual.py
galaxea_sim/robots/: base.py  bimanual.py  r1.py  r1_lite.py  r1_pro.py
galaxea_sim/scripts/: collect_demos.py  convert_single_galaxea_sim_to_galaxea_lerobot.py  convert_single_galaxea_sim_to_lerobot.py  convert_single_galaxea_sim_to_lerobot_opendp.py  convert_single_galaxea_sim_to_lerobot_with_noise_label.py  convert_to_diffusion_policy.py  convert_to_diffusion_policy_with_noise.py  convert_to_original_act.py  deploy_real_robot_act.py  eval_lerobot_act_policy.py  eval_lerobot_dp_policy.py  replay_demos.py  train_lerobot_act_policy.py  train_lerobot_act_policy_with_noise_filter.py  train_lerobot_dp_policy.py
galaxea_sim/utils/: data_utils.py  dataset_utils.py  dp_noise_filtered_dataset.py  grasp_generation.py  grasp_sample.py  gym_utils.py  mplib_utils.py  noise_filtered_dataset.py  original_policy_dataset.py  rand_utils.py  robotwin_utils.py  (+2 more)
scripts/: act_run.sh  eval_act.sh  resume_act.sh  train_dp_different_configs.sh  train_dp_with_noise.sh
test/: readh5.py  test_rgb.py
(+175 files in other folders)
