[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { include = ["galaxea_sim", "galaxea_sim.*"] }

[project]
name = "galaxea-sim"
version = "0.1.0"
description = "A robotics simulation package"
readme = "README.md"
authors = [{ name = "Chenhao Lu", email = "luch21@mails.tsinghua.edu.cn" }]
license = { file = "LICENSE" }
dependencies = [
    "gymnasium",
    "tqdm",
    "trimesh",
    "h5py",
    "imageio",
    "transforms3d",
    "torch",
    "pytorch_kinematics_ms",
    "seaborn",
    "coacd==1.0.5",
    "sapien==3.0.0b1",
    "tyro",
    "loguru",
    "tqdm",
    "trimesh",
    "matplotlib==3.10.3",
    "h5py",
    "imageio",
    "transforms3d",
    "pytorch_kinematics_ms",
    "seaborn",
    "coacd",
    "idna",
    "certifi",
    "mplib",
    "pytz",
    "numpy==1.26.3",
]
requires-python = ">=3.8"